[package]
name = "mini-swe-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.27"
futures-util = "0.3"
pulldown-cmark = "0.11"
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
textwrap = "0.16"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
